# maritime_interfaces

./: .codespell-ignore-words.txt  .gitignore  .gitmodules  .pre-commit-config.yaml  .pyrightconfig.json  README.md  package.xml
.github/workflows/: lint.yaml  release.yaml  release_private.yaml  release_public.yaml  test.yaml
docs/: available_interfaces.md
docs/architecture/: maritime_interfaces.md
maritime_interfaces/engineering/: package.xml
maritime_interfaces/engineering/engine/: EngineControl.msg  EngineState.msg
maritime_interfaces/engineering/gearbox/: GearboxControl.msg  GearboxState.msg
maritime_interfaces/engineering/helm/: HelmState.msg
maritime_interfaces/engineering/thruster/: ThrusterControl.msg
maritime_interfaces/support/: package.xml
