<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maritime_interfaces_support</name>
  <version>0.0.1</version>
  <description>Support</description>
  <maintainer email="team@greenroomrobotics.com">Greenroom Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ais_msgs</depend>
  <depend>notification_msgs</depend>
  <depend>geofence_msgs</depend>
  <depend>waypoint_msgs</depend>
  <depend>perception_msgs</depend>
  <depend>geolocation_msgs</depend>
  <depend>network_monitoring_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>